--- a/action.yaml
+++ b/action.yaml
@@ -29,7 +29,7 @@ runs:
     - name: Setup
       run: |
         foreverbull env start ${{ inputs.alpaca_key }} ${{ inputs.alpaca_secret }}
-        foreverbull service zipline backtest quay.io/foreverbull/zipline:latest
+        foreverbull service zipline backtest lhjnilsson/zipline:0.0.2403051754
         foreverbull backtest create action_backtest ${{ inputs.start }} ${{ inputs.end }} ${{ inputs.assets }} --backtest-service zipline
         pytest ${{ inputs.path }} --backtest=action_backtest
     - name: Teardown
