--- a/action.yaml
+++ b/action.yaml
@@ -24,12 +24,10 @@ runs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    - name: Install Client
-      shell: bash
-      run: python install_client.py
-    - name: Setup
+    - name: Run
       shell: bash
       run: |
+        pip install https://github.com/lhjnilsson/foreverbull/releases/download/0.0.2403051754/foreverbull-0.0.2403051754-py3-none-any.whl
         foreverbull env start ${{ inputs.alpaca_key }} ${{ inputs.alpaca_secret }}
         foreverbull service zipline backtest lhjnilsson/zipline:0.0.2403051754
         foreverbull backtest create action_backtest ${{ inputs.start }} ${{ inputs.end }} ${{ inputs.assets }} --backtest-service zipline
