how to create backtest

--- a/action.yaml
+++ b/action.yaml
@@ -29,7 +29,7 @@ runs:
       run: |
         pip install https://github.com/lhjnilsson/foreverbull/releases/download/0.0.2403051754/foreverbull-0.0.2403051754-py3-none-any.whl
         foreverbull env start ${{ inputs.alpaca_key }} ${{ inputs.alpaca_secret }}
-        foreverbull service zipline backtest lhjnilsson/zipline:0.0.2403051754
+        foreverbull service create zipline lhjnilsson/zipline:0.0.2403051754
         foreverbull backtest create action_backtest ${{ inputs.start }} ${{ inputs.end }} ${{ inputs.assets }} --backtest-service zipline
         pytest ${{ inputs.path }} --backtest=action_backtest
     - name: Teardown
